# openai-api-rs

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: rust-check.yml
examples/: assistant.rs  audio_speech.rs  audio_transcriptions.rs  audio_translations.rs  batch.rs  chat_completion.rs  chat_completion_stream.rs  completion.rs  embedding.rs  function_call.rs  function_call_role.rs  model.rs  openrouter.rs  openrouter_models.rs  openrouter_reasoning.rs  responses.rs  responses_stream.rs  text_to_speech.rs  vision.rs
examples/data/: batch_request.json  batch_result.json
examples/realtime/: Cargo.toml
examples/realtime/src/: main.rs
src/: lib.rs
src/realtime/: api.rs  client_event.rs  server_event.rs  types.rs
src/realtime/api/: sip.rs
src/v1/: api.rs  assistant.rs  audio.rs  batch.rs  chat_completion.rs  common.rs  completion.rs  edit.rs  embedding.rs  error.rs  file.rs  fine_tune.rs  fine_tuning.rs  image.rs  message.rs  mod.rs  model.rs  moderation.rs  realtime_calls.rs  responses.rs  run.rs  thread.rs  types.rs
src/v1/chat_completion/: chat_completion.rs  chat_completion_stream.rs  mod.rs
src/v1/responses/: mod.rs  responses.rs  responses_stream.rs
tests/: client_integration.rs
