[package]
name = "openai-api-rs"
version = "5.0.8"
edition = "2021"
authors = ["Dongri Jin <dongrium@gmail.com>"]
license = "MIT"
description = "OpenAI API client library for Rust (unofficial)"
repository = "https://github.com/dongri/openai-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.12"
features = ["json", "multipart", "socks"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.bytes]
version = "1.7.1"
