[package]
name = "openai-api-rs"
version = "5.1.0"
edition = "2021"
authors = ["Dongri Jin <dongrium@gmail.com>"]
license = "MIT"
description = "OpenAI API client library for Rust (unofficial)"
repository = "https://github.com/dongri/openai-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]
rustls = ["reqwest/rustls-tls"]
default-tls = ["reqwest/default-tls"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["charset", "http2", "json", "multipart", "socks"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.bytes]
version = "1.7.1"

[dependencies.tokio-tungstenite]
version = "0.24.0"
features = ["connect", "native-tls"]

[dependencies.futures-util]
version = "0.3.31"
features = ["sink", "std"]
