[package]
name = "realtime"
version = "0.1.0"
edition = "2021"

[dependencies]
openai-api-rs = { path = "../../../openai-api-rs" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["connect", "native-tls"] }
futures-util = { version = "0.3.31", features = ["sink", "std"] }
futures-channel = "0.3.31"
